fix: ensure backdrops align properly

--- a/assets/style.css
+++ b/assets/style.css
@@ -157,7 +157,7 @@ p a:hover {
     mask-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 1.0) 25%);
     opacity: 0.20;
     position: absolute;
-    right: -30px;
+    right: -34px;
     top: 0;
   }
 
